alteração de teste

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			<script type="text/javascript" src="_class/header.js"></script>
 			<script type="text/javascript" src="_class/imagens_inicio.js"></script>
 			<div class="corpo">
+            <div class="nova"></div>
+            <div id="nova2"><table class="todas"><h1>nossa que html facil</h1></table></div>
+            outra linha line <a href=""></a>
 				<h2>Saiba Mais</h2>
                 <script type="text/javascript" src="_js/acessibilidade.js"></script>
                 <center><h4 id="affz" style="font-size: 18px;">Altere o tamanho da letra:
